Rename github test targets
CMK-27226

Change-Id: I33a90a0ae239eb090df3e0eae8ce9220121e9284

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -18,7 +18,7 @@ jobs:
             # Avoid falling back to our internal bazel remote cache on github actions
             BAZEL_CACHE_URL: ""
             # Needed by "make .venv" to compute PYTHON_REQUIREMENTS_TEST
-            EDITION: raw
+            EDITION: community
         strategy:
             matrix:
                 include:
@@ -31,7 +31,7 @@ jobs:
                     - name: Python unit tests
                       target: test-unit
                     - name: mypy tests
-                      target: test-mypy-raw
+                      target: test-mypy-gpl
         steps:
             - name: Set Environment Variables
               run: |
