--- a/tests/semgrep/rules/key_size_unit_test.yaml
+++ b/tests/semgrep/rules/key_size_unit_test.yaml
@@ -10,7 +10,7 @@ rules:
     pattern-either:
       - patterns:
           - pattern-inside: |
-              from cmk.gui.cee.saml2_auth._config import
+              from cmk.gui.nonfree.pro.saml2_auth._config import
               replace_builtin_signature_cert
               ...
           - patterns:
