agent_receiver: Move log to lib
Change-Id: I17df39c1f1eeff6fdb664b5c73459d2aa7f0a1ef

--- a/packages/cmk-agent-receiver/BUILD
+++ b/packages/cmk-agent-receiver/BUILD
@@ -20,7 +20,7 @@ py_library(
         "cmk/agent_receiver/endpoints.py",
         "cmk/agent_receiver/lib/__init__.py",
         "cmk/agent_receiver/lib/certs.py",
-        "cmk/agent_receiver/log.py",
+        "cmk/agent_receiver/lib/log.py",
         "cmk/agent_receiver/main.py",
         "cmk/agent_receiver/middleware.py",
         "cmk/agent_receiver/models.py",
