Fix for 'Package cmc' quailty gate.
The 'Package cmc' quailty gate fails if any warning are found.

When compiling protobuf under an execution configuration e.g. to use
protoc as a tool during a build to process .proto files, it produces the following
warning.

    warning: '*(const std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*)((char*)<unknown> + 8).std::__cxx11::basic_string<char>::_M_dataplus.std::__cxx11::basic_string<char>::_Alloc_hider::_M_p' may be used uninitialized [-Wmaybe-uninitialized]

This ignores this warning.

Change-Id: I02baf502bba7481df43357976e6149856e1d9fdf

--- a/.bazelrc
+++ b/.bazelrc
@@ -94,6 +94,11 @@ common:debug --verbose_failures
 # test:debug ...
 
 ################################################################################
+# Example: bazel build //:state_proto
+################################################################################
+build --host_per_file_copt=^external/protobuf~/src/google/protobuf/.*.cc@-Wno-maybe-uninitialized
+
+################################################################################
 # Example: bazel build --config clang-tidy //non-free/packages/cmc:all
 ################################################################################
 
