agent_receiver: Extract credentials
Define internal_credentials in their own module

Change-Id: I187336c02a672f73f52bc81a93b66338b4c7a375

--- a/packages/cmk-agent-receiver/BUILD
+++ b/packages/cmk-agent-receiver/BUILD
@@ -19,6 +19,7 @@ py_library(
         "cmk/agent_receiver/agent_receiver/models.py",
         "cmk/agent_receiver/endpoints.py",
         "cmk/agent_receiver/lib/__init__.py",
+        "cmk/agent_receiver/lib/auth.py",
         "cmk/agent_receiver/lib/certs.py",
         "cmk/agent_receiver/lib/config.py",
         "cmk/agent_receiver/lib/log.py",
