ec: updated snmp compilation to support compiling shipped mibs
SUP-20189

Change-Id: Ic4b8ee73fa089f088737a2564752abce54f5bd1b

--- a/omd/Makefile
+++ b/omd/Makefile
@@ -95,7 +95,14 @@ BOM := bill-of-materials.json
 # Called while building the .rpm/.deb packages
 install: $(INSTALL_GLOBAL) $(DEPS_INSTALL_BAZEL)
 	python3 ./strip_binaries --exclude cmk-agent-ctl --exclude mk-sql --exclude cmc --exclude waitmax --exclude agent_modbus $(DESTDIR)$(OMD_ROOT)/
-
+	PYTHONPATH=$(DESTDIR)$(OMD_ROOT)/lib/python$(PYTHON_MAJOR_DOT_MINOR)/site-packages \
+    PYTHONDONTWRITEBYTECODE=1 \
+    python3 -c "from pysmi.scripts.mibdump import start; start()" \
+	--mib-searcher=$(DESTDIR)$(OMD_ROOT)/share/snmp/mibs \
+	--destination-directory=$(DESTDIR)$(OMD_ROOT)/share/snmp/compiled_mibs \
+	--no-python-compile \
+	--rebuild \
+	$(wildcard $(DESTDIR)$(OMD_ROOT)/share/snmp/mibs/*.txt)
 # Called by our release system to build appliance packages
 cma: $(CMA_PACKAGE)
 
@@ -120,6 +127,7 @@ $(PRE_INSTALL): $(BUILD_HELPER_DIR)
 	$(MKDIR) $(DESTDIR)$(OMD_ROOT)/share/omd
 	$(MKDIR) $(DESTDIR)$(OMD_ROOT)/share/diskspace
 	$(MKDIR) $(DESTDIR)$(OMD_ROOT)/share/man/man1
+	$(MKDIR) $(DESTDIR)$(OMD_ROOT)/share/snmp/compiled_mibs
 	$(MKDIR) $(DESTDIR)$(OMD_ROOT)/skel
 	$(call log_time,$@,done)
 	touch $@
