[logwatch]Windows agent reads config and detects cluster node by IP
CMK-27067

Change-Id: I1464581c6746e5c0c18d0c0d07505a48063085b8

--- a/agents/wnx/install/resources/check_mk.user.yml
+++ b/agents/wnx/install/resources/check_mk.user.yml
@@ -248,6 +248,11 @@ logwatch:
         # - 'Application': ;;SAP           # exclude SAP from Application log
         # - '*': checkmk;ibm;;Microsoft    # include checkmk and ibm, exclude Microsoft from all logs with exception of Application
 
+    clusters: # cluster name and node IPs that belong to the cluster
+       # test_cluster:
+       #    - ip1
+       #    - ip2
+       #    - ip3
 
 plugins:
     # enabled: yes
