18934 Add support for Almalinux 10
With this werk, Checkmk is built for Almalinux 10

Change-Id: I3ab44194abd8a77758281c0e135a9a4a74db7261

--- a/editions.yml
+++ b/editions.yml
@@ -8,6 +8,7 @@ common: &common
     - "ubuntu-24.04"
     - "centos-8"
     - "almalinux-9"
+    - "almalinux-10"
     - "sles-12sp5"
     - "sles-15sp3"
     - "sles-15sp4"
