omd: move call_scripts
Change-Id: I0bdee33e43e36bf8680b2d498e22381d08000463

--- a/omd/packages/omd/BUILD
+++ b/omd/packages/omd/BUILD
@@ -173,6 +173,7 @@ pkg_files(
         ":omdlib/options.py",
         ":omdlib/package_manager.py",
         ":omdlib/restore.py",
+        ":omdlib/scripts.py",
         ":omdlib/site_name.py",
         ":omdlib/site_paths.py",
         ":omdlib/sites.py",
