omd: move finalize_*
Change-Id: Ib6e6f52940c6ee5acb5a8201022262ccdde9c73b

--- a/omd/packages/omd/BUILD
+++ b/omd/packages/omd/BUILD
@@ -166,6 +166,7 @@ pkg_files(
         ":omdlib/contexts.py",
         ":omdlib/crash_reporting.py",
         ":omdlib/dialog.py",
+        ":omdlib/finalize.py",
         ":omdlib/global_options.py",
         ":omdlib/init_scripts.py",
         ":omdlib/instance_id.py",
