Install externally build agents via bazel
The agents are copied (or faked) before running Bazel. This is not how it should be done in Bazel,
but unfortunately at this point we are not able to build on all these architectures within Bazel,
since it is not the top priority right now.

CMK-26204

Change-Id: I0d31292081b59c0dd90a092d27557406e2153e62

--- a/agents/BUILD
+++ b/agents/BUILD
@@ -17,8 +17,22 @@ filegroup(
         "mk-job.aix",
         "mk-job.solaris",
         "waitmax",
+    ] + glob([
+        "check-mk-agent-*.noarch.rpm",
+        "check-mk-agent_*_all.deb",
+    ]),
+    visibility = ["//omd:__subpackages__"],
+)
+
+filegroup(
+    name = "agents-linux",
+    srcs = [
+        "linux/cmk-agent-ctl",
+        "linux/cmk-agent-ctl.gz",
+        "linux/cmk-agent-ctl-aarch64",
+        "linux/mk-sql",
     ],
-    visibility = ["//visibility:public"],
+    visibility = ["//omd:__subpackages__"],
 )
 
 filegroup(
