Fix for packaging rpm - rename raw to community
CMK-27226

Change-Id: I645b823c24374d2e5fe01ee1473c609ad7c4c6f7

--- a/omd/Makefile
+++ b/omd/Makefile
@@ -215,7 +215,7 @@ omd.spec: omd.spec.in
 	    -e 's#@APACHE_CONFDIR@#$(APACHE_CONF_DIR)#g' \
 	    -e 's#@APACHE_NAME@#$(APACHE_INIT_NAME)#g' \
 	    omd.spec.in > omd.spec
-	if [ "$(EDITION)" =  "raw" ]; then \
+	if [ "$(EDITION)" =  "community" ]; then \
 	    sed -i '/icmpsender/d;/icmpreceiver/d' omd.spec ; \
 	fi
 
