Clean up a few CCE references
Change-Id: Id45c509f382585b4920c1658888ce0152ee87d4e

--- a/packer/playbook.yml
+++ b/packer/playbook.yml
@@ -7,7 +7,7 @@
     - role: checkmk
       vars:
         state: absent
-        checkmk_server_edition: cce
+        checkmk_server_edition: ultimate
     - "change-motd"
     - configure-apache
 
