--- a/packer/roles/checkmk/defaults/main.yml
+++ b/packer/roles/checkmk/defaults/main.yml
@@ -2,7 +2,7 @@
 checkmk_server_server_stable_os:
   - Ubuntu-22
 
-checkmk_server_edition: cce
+checkmk_server_edition: ultimate
 checkmk_server_version: 2.1.0p18
 checkmk_server_verify_setup: 'true'
 
